--- a/yaw_testing.ipynb
+++ b/yaw_testing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-19T10:58:58.325623700Z",
-     "start_time": "2026-02-19T10:58:58.096095400Z"
+     "end_time": "2026-02-22T14:22:39.202162600Z",
+     "start_time": "2026-02-22T14:22:38.856825800Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T10:59:03.175101600Z",
-     "start_time": "2026-02-19T10:58:58.327624700Z"
+     "end_time": "2026-02-22T14:22:43.055022900Z",
+     "start_time": "2026-02-22T14:22:39.204162Z"
     }
    },
    "cell_type": "code",
@@ -68,6 +68,36 @@
    "execution_count": 2
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-22T14:52:17.813397500Z",
+     "start_time": "2026-02-22T14:52:17.631835200Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "a1 = jnp.ones((1, 3)) - jnp.array([0.1, 0.2, 0.3])\n",
+    "a2 = jnp.ones((1,3)) * 2.0 - 0.5\n",
+    "\n",
+    "print(a1.ravel())\n",
+    "print(a1.ravel().shape, a1.ravel().reshape((1, 3)).shape)\n",
+    "print(a1)"
+   ],
+   "id": "e92a668a440c568",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9 0.8 0.7]\n",
+      "(3,) (1, 3)\n",
+      "[[0.9 0.8 0.7]]\n"
+     ]
+    }
+   ],
+   "execution_count": 29
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "## DiffWake yawed vs unyawed comparisons",
@@ -76,17 +106,23 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T11:33:29.957266300Z",
-     "start_time": "2026-02-19T11:33:28.821787900Z"
+     "end_time": "2026-02-22T16:31:18.746044800Z",
+     "start_time": "2026-02-22T16:31:17.482158700Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 1. Define paths to configuration files\n",
+    "# wake_model = \"gauss\"\n",
+    "# data_dir = Path(\"data/horn\")\n",
+    "# farm_cfg_path = data_dir / f\"{wake_model}_hornsRev.yaml\"\n",
+    "# turbine_cfg_path = data_dir / \"vestas_v802MW.yaml\"\n",
+    "\n",
     "wake_model = \"gauss\"\n",
-    "data_dir = Path(\"data/horn\")\n",
-    "farm_cfg_path = data_dir / f\"{wake_model}_hornsRev.yaml\"\n",
+    "data_dir = Path(\"data/three_square\")\n",
+    "farm_cfg_path = data_dir / f\"gch.yaml\"\n",
     "turbine_cfg_path = data_dir / \"vestas_v802MW.yaml\"\n",
+    "\n",
     "\n",
     "# 2. Load the base configuration\n",
     "base_cfg = load_input(farm_cfg_path, turbine_cfg_path)\n",
@@ -95,8 +131,8 @@
     "ws = 13.5\n",
     "wd = 270.0\n",
     "ti_val = 0.06\n",
-    "layout_x = jnp.array([0.0, 400.0, 800.0], dtype=DTYPE)\n",
-    "layout_y = jnp.array([0.0, 0.0, 0.0], dtype=DTYPE)\n",
+    "# layout_x = jnp.array([0.0, 400.0, 800.0], dtype=DTYPE)\n",
+    "# layout_y = jnp.array([0.0, 0.0, 0.0], dtype=DTYPE)\n",
     "\n",
     "# 4. Define flow conditions\n",
     "wind_speed = jnp.array([ws], dtype=DTYPE)\n",
@@ -105,8 +141,8 @@
     "\n",
     "# 5. Update the configuration\n",
     "cfg = base_cfg.set(\n",
-    "    layout_x=layout_x,\n",
-    "    layout_y=layout_y,\n",
+    "    # layout_x=layout_x,\n",
+    "    # layout_y=layout_y,\n",
     "    wind_speeds=wind_speed,\n",
     "    wind_directions=wind_dir,\n",
     "    turbulence_intensities=ti\n",
@@ -123,7 +159,7 @@
     "# hr1_state = create_state(hr1_cfg)\n",
     "\n",
     "# --- Baseline: Unyawed Farm ---\n",
-    "yaw_angles_unyawed = jnp.zeros((1, 3), dtype=DTYPE) # (n_findex, n_turbines)\n",
+    "yaw_angles_unyawed = jnp.zeros((1, 9), dtype=DTYPE) # (n_findex, n_turbines)\n",
     "# hr1_yaw_angles_unyawed = jnp.zeros((1, 80), dtype=DTYPE)\n",
     "\n",
     "state_unyawed = alter_yaw_angles(yaw_angles_unyawed, state)\n",
@@ -147,8 +183,8 @@
     "\n",
     "# # --- Case: Yawed Farm ---\n",
     "# y1, y2, y3 = 12.12434997, 20.76370488, 16.03151927\n",
-    "y1, y2, y3 = 25.0, -20.0, 0.0\n",
-    "yaw_angles_deg = jnp.array([[y1, y2, y3]], dtype=DTYPE) # Try steering wakes away from downstream turbines\n",
+    "y1, y2, y3, y4, y5, y6, y7, y8, y9 = 21.75863971, 21.703396,   21.69791776, 22.05944945, 21.87961235, 21.84110497, 5.2084374,   5.20473176,  5.20330509\n",
+    "yaw_angles_deg = jnp.array([[y1, y2, y3, y4, y5, y6, y7, y8, y9]], dtype=DTYPE) # Try steering wakes away from downstream turbines\n",
     "yaw_angles_rad = jnp.deg2rad(yaw_angles_deg)\n",
     "\n",
     "state_yawed = alter_yaw_angles(yaw_angles_rad, state)\n",
@@ -172,70 +208,97 @@
     "#                                     yaw_angles=hr1_state_yawed.farm.yaw_angles)\n",
     "# yawed_hr1_farm_power = jnp.sum(hr1_yawed_turbine_powers)/1e6\n",
     "\n",
-    "# FLORIS YAW\n",
+    "# # FLORIS YAW\n",
     "fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\n",
-    "hr1_fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\n",
+    "# hr1_fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\n",
     "\n",
-    "floris_yaw_angles = np.array([y1, y2, y3]).reshape(1, -1)\n",
-    "# hr1_floris_yaw_angles = np.concat([np.full((1, 70), 10), np.zeros((1, 10))], axis=1)\n",
-    "\n",
-    "time_series = TimeSeries(\n",
-    "    wind_directions=np.array([wd]),\n",
-    "    wind_speeds=np.array([ws]),\n",
-    "    turbulence_intensities=ti_val,\n",
-    ")\n",
-    "# hr1_fmodel.set(wind_data=time_series,\n",
-    "#                yaw_angles=np.zeros((1, 80)))\n",
-    "\n",
+    "floris_yaw_angles = np.array([y1, y2, y3, y4, y5, y6, y7, y8, y9]).reshape(1, -1)\n",
+    "# # hr1_floris_yaw_angles = np.concat([np.full((1, 70), 10), np.zeros((1, 10))], axis=1)\n",
+    "#\n",
+    "# time_series = TimeSeries(\n",
+    "#     wind_directions=np.array([wd]),\n",
+    "#     wind_speeds=np.array([ws]),\n",
+    "#     turbulence_intensities=ti_val,\n",
+    "# )\n",
+    "# # hr1_fmodel.set(wind_data=time_series,\n",
+    "# #                yaw_angles=np.zeros((1, 80)))\n",
+    "#\n",
     "fmodel.set(wind_data=time_series,\n",
-    "           layout_x=np.array([0.0, 400.0, 800.0]),\n",
-    "           layout_y=np.array([0.0, 0.0, 0.0]),\n",
+    "           layout_x=np.sort(np.array([0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0])),\n",
+    "           layout_y=np.array([0.0, 0.0, 0.0, 630.0, 630.0, 630.0, -630.0, -630.0, -630.0]),\n",
     "           yaw_angles=np.zeros_like(floris_yaw_angles))\n",
     "fmodel.run()\n",
     "# hr1_fmodel.run()\n",
-    "\n",
-    "# baseline case\n",
+    "#\n",
+    "# # baseline case\n",
     "floris_baseline_power = fmodel.get_farm_power() / 1e6\n",
-    "# hr1_floris_baseline_power = hr1_fmodel.get_farm_power() / 1e6\n",
+    "# # hr1_floris_baseline_power = hr1_fmodel.get_farm_power() / 1e6\n",
     "turbine_powers_floris = fmodel.get_turbine_powers()\n",
-    "# hr1_turbine_powers_floris = hr1_fmodel.get_turbine_powers()\n",
-    "\n",
-    "\n",
-    "# yawed case\n",
-    "# hr1_fmodel.set(yaw_angles=hr1_floris_yaw_angles)\n",
+    "# # hr1_turbine_powers_floris = hr1_fmodel.get_turbine_powers()\n",
+    "#\n",
+    "#\n",
+    "# # yawed case\n",
+    "# # hr1_fmodel.set(yaw_angles=hr1_floris_yaw_angles)\n",
     "fmodel.set(yaw_angles=floris_yaw_angles)\n",
-    "# hr1_fmodel.run()\n",
+    "# # hr1_fmodel.run()\n",
     "fmodel.run()\n",
     "floris_yawed_power = fmodel.get_farm_power() / 1e6\n",
     "turbine_powers_floris_yawed = fmodel.get_turbine_powers()\n",
-    "# hr1_floris_yawed_power = hr1_fmodel.get_farm_power() / 1e6\n",
-    "# hr1_turbine_powers_floris_yawed = hr1_fmodel.get_turbine_powers()"
+    "# # hr1_floris_yawed_power = hr1_fmodel.get_farm_power() / 1e6\n",
+    "# # hr1_turbine_powers_floris_yawed = hr1_fmodel.get_turbine_powers()"
    ],
    "id": "116c16e5f490e8",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 61
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T11:32:51.998143800Z",
-     "start_time": "2026-02-19T11:32:51.887630400Z"
+     "end_time": "2026-02-22T16:31:06.067207100Z",
+     "start_time": "2026-02-22T16:31:05.833310500Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "a = np.array([0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0])\n",
+    "np.sort(a)"
+   ],
+   "id": "28f2354b2f944efa",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   0.,    0.,    0.,  630.,  630.,  630., 1260., 1260., 1260.])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 60
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-22T16:31:26.922604400Z",
+     "start_time": "2026-02-22T16:31:26.745932200Z"
     }
    },
    "cell_type": "code",
    "source": [
     "print(f\"----- FLORIS results -----\")\n",
     "print(f\"Baseline farm power: {floris_baseline_power[0]:.6f} MW\")\n",
-    "print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris[0]]}\" )\n",
+    "# print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris[0]]}\" )\n",
     "print(f\"Yawed farm power: {floris_yawed_power[0]:.6f} MW\")\n",
-    "print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
+    "# print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
     "\n",
     "\n",
     "print(f\"----- DiffWake results  -----\")\n",
     "print(f\"Baseline farm power: {unyawed_farm_power:.6f} MW\")\n",
-    "print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
+    "# print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
     "print(f\"Yawed farm power: {yawed_farm_power:.6f} MW\")\n",
-    "print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\\n\" )\n",
+    "# print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\\n\" )\n",
     "\n",
     "print(\"---------- Differences ----------\")\n",
     "print(f\"Absolute baseline power difference (GCH) = {absolute_percentage_difference(floris_baseline_power, unyawed_farm_power)[0]:.6f}%\")\n",
@@ -264,92 +327,18 @@
      "output_type": "stream",
      "text": [
       "----- FLORIS results -----\n",
-      "Baseline farm power: 4.836709 MW\n",
-      "Turbine powers: [1972125.6058977128, 1663348.6365516074, 1201235.1647396581]\n",
-      "Yawed farm power: 5.274442 MW\n",
-      "Turbine powers: [1927223.0146313708, 1691251.0737216133, 1655967.842678925]\n",
-      "\n",
+      "Baseline farm power: 17.749130 MW\n",
+      "Yawed farm power: 17.582570 MW\n",
       "----- DiffWake results  -----\n",
-      "Baseline farm power: 4.836627 MW\n",
-      "Turbine powers: [1972125.6058977128, 1663348.6634779854, 1201152.8269721586]\n",
-      "Yawed farm power: 5.344458 MW\n",
-      "Turbine powers: [1927223.0146313705, 1676215.0369346647, 1741019.6548874935]\n",
-      "\n",
+      "Baseline farm power: 15.798074 MW\n",
+      "Yawed farm power: 16.443025 MW\n",
       "---------- Differences ----------\n",
-      "Absolute baseline power difference (GCH) = 0.001702%\n",
-      "Absolute yawed power difference (GCH) = 1.310063%\n"
+      "Absolute baseline power difference (GCH) = 12.349965%\n",
+      "Absolute yawed power difference (GCH) = 6.930263%\n"
      ]
     }
    ],
-   "execution_count": 10
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-19T11:33:41.736774400Z",
-     "start_time": "2026-02-19T11:33:41.611416400Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "print(f\"----- FLORIS results -----\")\n",
-    "print(f\"Baseline farm power: {floris_baseline_power[0]:.6f} MW\")\n",
-    "print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris[0]]}\" )\n",
-    "print(f\"Yawed farm power: {floris_yawed_power[0]:.6f} MW\")\n",
-    "print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
-    "\n",
-    "\n",
-    "print(f\"----- DiffWake results  -----\")\n",
-    "print(f\"Baseline farm power: {unyawed_farm_power:.6f} MW\")\n",
-    "print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
-    "print(f\"Yawed farm power: {yawed_farm_power:.6f} MW\")\n",
-    "print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\\n\" )\n",
-    "\n",
-    "print(\"---------- Differences ----------\")\n",
-    "print(f\"Absolute baseline power difference (GCH) = {absolute_percentage_difference(floris_baseline_power, unyawed_farm_power)[0]:.6f}%\")\n",
-    "print(f\"Absolute yawed power difference (GCH) = {absolute_percentage_difference(floris_yawed_power, yawed_farm_power)[0]:.6f}%\")\n",
-    "# print(\"=\"*100)\n",
-    "# print(f\"----- FLORIS results (Horns Rev 1)-----\")\n",
-    "# print(f\"Baseline farm power: {hr1_floris_baseline_power[0]:.6f} MW\")\n",
-    "# # print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris[0]]}\" )\n",
-    "# print(f\"Yawed farm power: {hr1_floris_yawed_power[0]:.6f} MW\\n\")\n",
-    "# # print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
-    "#\n",
-    "# print(f\"----- DiffWake results (Horns Rev 1) -----\")\n",
-    "# print(f\"Baseline farm power: {unyawed_hr1_farm_power:.6f} MW\")\n",
-    "# # print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
-    "# print(f\"Yawed farm power: {yawed_hr1_farm_power:.6f} MW\")\n",
-    "# # print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\" )\n",
-    "# print(\"\\n---------- Differences ----------\")\n",
-    "# print(f\"Absolute baseline power difference ({wake_model}) = {absolute_percentage_difference(hr1_floris_baseline_power, unyawed_hr1_farm_power)[0]:.6f}%\")\n",
-    "# print(f\"Absolute yawed power difference ({wake_model}) = {absolute_percentage_difference(hr1_floris_yawed_power, yawed_hr1_farm_power)[0]:.6f}%\")\n",
-    "\n"
-   ],
-   "id": "d016ba50a65e7ca1",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----- FLORIS results -----\n",
-      "Baseline farm power: 4.836709 MW\n",
-      "Turbine powers: [1972125.6058977128, 1663348.6365516074, 1201235.1647396581]\n",
-      "Yawed farm power: 5.036265 MW\n",
-      "Turbine powers: [1927223.0146313708, 1691251.0737216133, 1417790.6838095644]\n",
-      "\n",
-      "----- DiffWake results  -----\n",
-      "Baseline farm power: 4.836627 MW\n",
-      "Turbine powers: [1972125.6058977128, 1663348.6634779854, 1201152.8269721586]\n",
-      "Yawed farm power: 5.040140 MW\n",
-      "Turbine powers: [1927223.0146313705, 1676215.0369346647, 1436701.8586788638]\n",
-      "\n",
-      "---------- Differences ----------\n",
-      "Absolute baseline power difference (GCH) = 0.001702%\n",
-      "Absolute yawed power difference (GCH) = 0.076886%\n"
-     ]
-    }
-   ],
-   "execution_count": 16
+   "execution_count": 63
   },
   {
    "metadata": {},
