--- a/yaw_testing.ipynb
+++ b/yaw_testing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-22T14:22:39.202162600Z",
-     "start_time": "2026-02-22T14:22:38.856825800Z"
+     "end_time": "2026-02-23T14:18:18.516138200Z",
+     "start_time": "2026-02-23T14:18:18.343284100Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-22T14:22:43.055022900Z",
-     "start_time": "2026-02-22T14:22:39.204162Z"
+     "end_time": "2026-02-23T14:18:21.100792900Z",
+     "start_time": "2026-02-23T14:18:18.517138900Z"
     }
    },
    "cell_type": "code",
@@ -37,6 +37,10 @@
     "from diffwake.diffwake_jax.util import set_precision\n",
     "from floris import FlorisModel, TimeSeries\n",
     "import numpy as np\n",
+    "from diffwake.diffwake_jax.model import load_input, create_state\n",
+    "from diffwake.diffwake_jax.yaw_runner import make_yaw_runner\n",
+    "from diffwake.diffwake_jax.util import average_velocity_jax\n",
+    "from diffwake.diffwake_jax.turbine.operation_models import power\n",
     "import time\n",
     "\n",
     "\n",
@@ -68,36 +72,6 @@
    "execution_count": 2
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-22T14:52:17.813397500Z",
-     "start_time": "2026-02-22T14:52:17.631835200Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "a1 = jnp.ones((1, 3)) - jnp.array([0.1, 0.2, 0.3])\n",
-    "a2 = jnp.ones((1,3)) * 2.0 - 0.5\n",
-    "\n",
-    "print(a1.ravel())\n",
-    "print(a1.ravel().shape, a1.ravel().reshape((1, 3)).shape)\n",
-    "print(a1)"
-   ],
-   "id": "e92a668a440c568",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.9 0.8 0.7]\n",
-      "(3,) (1, 3)\n",
-      "[[0.9 0.8 0.7]]\n"
-     ]
-    }
-   ],
-   "execution_count": 29
-  },
-  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "## DiffWake yawed vs unyawed comparisons",
@@ -106,8 +80,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-22T16:31:18.746044800Z",
-     "start_time": "2026-02-22T16:31:17.482158700Z"
+     "end_time": "2026-02-23T14:25:57.305924500Z",
+     "start_time": "2026-02-23T14:25:55.635428400Z"
     }
    },
    "cell_type": "code",
@@ -183,7 +157,7 @@
     "\n",
     "# # --- Case: Yawed Farm ---\n",
     "# y1, y2, y3 = 12.12434997, 20.76370488, 16.03151927\n",
-    "y1, y2, y3, y4, y5, y6, y7, y8, y9 = 21.75863971, 21.703396,   21.69791776, 22.05944945, 21.87961235, 21.84110497, 5.2084374,   5.20473176,  5.20330509\n",
+    "y1, y2, y3, y4, y5, y6, y7, y8, y9 = 25.0, 25.0, 25.0, 15.52, 15.34, 15.27, 0.0, 0.0, 0.0\n",
     "yaw_angles_deg = jnp.array([[y1, y2, y3, y4, y5, y6, y7, y8, y9]], dtype=DTYPE) # Try steering wakes away from downstream turbines\n",
     "yaw_angles_rad = jnp.deg2rad(yaw_angles_deg)\n",
     "\n",
@@ -215,17 +189,26 @@
     "floris_yaw_angles = np.array([y1, y2, y3, y4, y5, y6, y7, y8, y9]).reshape(1, -1)\n",
     "# # hr1_floris_yaw_angles = np.concat([np.full((1, 70), 10), np.zeros((1, 10))], axis=1)\n",
     "#\n",
-    "# time_series = TimeSeries(\n",
-    "#     wind_directions=np.array([wd]),\n",
-    "#     wind_speeds=np.array([ws]),\n",
-    "#     turbulence_intensities=ti_val,\n",
-    "# )\n",
+    "time_series = TimeSeries(\n",
+    "    wind_directions=np.array([wd]),\n",
+    "    wind_speeds=np.array([ws]),\n",
+    "    turbulence_intensities=ti_val,\n",
+    ")\n",
     "# # hr1_fmodel.set(wind_data=time_series,\n",
     "# #                yaw_angles=np.zeros((1, 80)))\n",
-    "#\n",
+    "\n",
+    "# Sort the coordinates\n",
+    "lx = np.array([0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0])\n",
+    "ly = np.array([0.0, 0.0, 0.0, 630.0, 630.0, 630.0, -630.0, -630.0, -630.0])\n",
+    "\n",
+    "sort_indices = np.argsort(lx)\n",
+    "lx_sorted = lx[sort_indices]\n",
+    "ly_sorted = ly[sort_indices]\n",
+    "\n",
+    "\n",
     "fmodel.set(wind_data=time_series,\n",
-    "           layout_x=np.sort(np.array([0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0])),\n",
-    "           layout_y=np.array([0.0, 0.0, 0.0, 630.0, 630.0, 630.0, -630.0, -630.0, -630.0]),\n",
+    "           layout_x=lx_sorted,\n",
+    "           layout_y=ly_sorted,\n",
     "           yaw_angles=np.zeros_like(floris_yaw_angles))\n",
     "fmodel.run()\n",
     "# hr1_fmodel.run()\n",
@@ -249,40 +232,13 @@
    ],
    "id": "116c16e5f490e8",
    "outputs": [],
-   "execution_count": 61
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-22T16:31:06.067207100Z",
-     "start_time": "2026-02-22T16:31:05.833310500Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "a = np.array([0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0, 0.0, 630.0, 1260.0])\n",
-    "np.sort(a)"
-   ],
-   "id": "28f2354b2f944efa",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([   0.,    0.,    0.,  630.,  630.,  630., 1260., 1260., 1260.])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 60
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-22T16:31:26.922604400Z",
-     "start_time": "2026-02-22T16:31:26.745932200Z"
+     "end_time": "2026-02-23T14:25:57.805782700Z",
+     "start_time": "2026-02-23T14:25:57.622695Z"
     }
    },
    "cell_type": "code",
@@ -327,26 +283,118 @@
      "output_type": "stream",
      "text": [
       "----- FLORIS results -----\n",
-      "Baseline farm power: 17.749130 MW\n",
-      "Yawed farm power: 17.582570 MW\n",
+      "Baseline farm power: 16.246120 MW\n",
+      "Yawed farm power: 16.756268 MW\n",
       "----- DiffWake results  -----\n",
       "Baseline farm power: 15.798074 MW\n",
-      "Yawed farm power: 16.443025 MW\n",
+      "Yawed farm power: 16.392811 MW\n",
       "---------- Differences ----------\n",
-      "Absolute baseline power difference (GCH) = 12.349965%\n",
-      "Absolute yawed power difference (GCH) = 6.930263%\n"
+      "Absolute baseline power difference (GCH) = 2.836083%\n",
+      "Absolute yawed power difference (GCH) = 2.217173%\n"
      ]
     }
    ],
-   "execution_count": 63
+   "execution_count": 9
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Use yaw_runner.py",
+   "id": "7106ae158434d1b5"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-23T14:18:29.588918500Z",
+     "start_time": "2026-02-23T14:18:29.364710100Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "def build_state_runner(\n",
+    "        data_dir: Path,\n",
+    "        farm_yaml: str,\n",
+    "        turbine_yaml: str,\n",
+    "        wind_dir_rad: jax.Array,\n",
+    "        wind_speed: jax.Array,\n",
+    "        turb_intensity: jax.Array,\n",
+    "        dtype,\n",
+    "):\n",
+    "    cfg = load_input(\n",
+    "        str(data_dir / farm_yaml),\n",
+    "        str(data_dir / turbine_yaml),\n",
+    "    ).set(\n",
+    "        wind_directions=wind_dir_rad,\n",
+    "        wind_speeds=wind_speed,\n",
+    "        turbulence_intensities=turb_intensity,\n",
+    "    )\n",
+    "    state = create_state(cfg)\n",
+    "    runner = make_yaw_runner(state)\n",
+    "\n",
+    "    x0 = jnp.asarray(cfg.layout[\"layout_x\"], dtype=dtype)\n",
+    "    N = int(x0.shape[0])\n",
+    "\n",
+    "    return state, runner, N"
+   ],
+   "id": "d3a4a1efd0c09225",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "d8e30910d5782af5"
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-23T14:18:32.386526100Z",
+     "start_time": "2026-02-23T14:18:31.654981800Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "DTYPE = jnp.float64\n",
+    "data_dir = Path(\"data/three_square\")\n",
+    "farm_cfg = \"gch.yaml\"\n",
+    "turbine_cfg = \"vestas_v802MW.yaml\"\n",
+    "npz_path = \"weather_data.npz\"\n",
+    "wind_dir = jnp.deg2rad(jnp.array([270.0]))\n",
+    "wind_speed = jnp.array([13.5])\n",
+    "turb_int = jnp.array([0.06])\n",
+    "\n",
+    "state, runner, N = build_state_runner(\n",
+    "    data_dir, farm_cfg, turbine_cfg, wind_dir, wind_speed, turb_int, DTYPE\n",
+    ")\n",
+    "\n",
+    "zero_yaw = jnp.full((1, N), 0.0, dtype=DTYPE)\n",
+    "out = runner(zero_yaw)"
+   ],
+   "id": "d8e30910d5782af5",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-23T14:18:05.748191300Z",
+     "start_time": "2026-02-23T14:18:05.570783700Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "farm_mw = jnp.sum(power(state.farm.power_thrust_table,\n",
+    "               out.u_sorted,\n",
+    "               state.flow.air_density,\n",
+    "               state.farm.yaw_angles)) / 1e6\n",
+    "print(f\"Farm power: {farm_mw:.6f} MW\")\n"
+   ],
+   "id": "844affa2b2c22677",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Farm power: 15.798074 MW\n"
+     ]
+    }
+   ],
+   "execution_count": 28
   }
  ],
  "metadata": {
