--- a/yaw_testing.ipynb
+++ b/yaw_testing.ipynb
@@ -343,37 +343,37 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-23T14:18:32.386526100Z",
-     "start_time": "2026-02-23T14:18:31.654981800Z"
+     "end_time": "2026-02-23T18:25:40.042337100Z",
+     "start_time": "2026-02-23T18:25:39.080092100Z"
     }
    },
    "cell_type": "code",
    "source": [
     "DTYPE = jnp.float64\n",
-    "data_dir = Path(\"data/three_square\")\n",
-    "farm_cfg = \"gch.yaml\"\n",
+    "data_dir = Path(\"data/horn\")\n",
+    "farm_cfg = \"gauss_hornsRev.yaml\"\n",
     "turbine_cfg = \"vestas_v802MW.yaml\"\n",
-    "npz_path = \"weather_data.npz\"\n",
+    "npz_path = \"weather_data_2.npz\"\n",
     "wind_dir = jnp.deg2rad(jnp.array([270.0]))\n",
-    "wind_speed = jnp.array([13.5])\n",
+    "wind_speed = jnp.array([9.5])\n",
     "turb_int = jnp.array([0.06])\n",
     "\n",
     "state, runner, N = build_state_runner(\n",
     "    data_dir, farm_cfg, turbine_cfg, wind_dir, wind_speed, turb_int, DTYPE\n",
     ")\n",
     "\n",
-    "zero_yaw = jnp.full((1, N), 0.0, dtype=DTYPE)\n",
+    "zero_yaw = jnp.full((1, N), jnp.deg2rad(8.5), dtype=DTYPE)\n",
     "out = runner(zero_yaw)"
    ],
    "id": "d8e30910d5782af5",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-23T14:18:05.748191300Z",
-     "start_time": "2026-02-23T14:18:05.570783700Z"
+     "end_time": "2026-02-23T18:25:40.286945100Z",
+     "start_time": "2026-02-23T18:25:40.104819100Z"
     }
    },
    "cell_type": "code",
@@ -390,11 +390,389 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Farm power: 15.798074 MW\n"
+      "Farm power: 69.545216 MW\n"
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-23T18:25:40.739916900Z",
+     "start_time": "2026-02-23T18:25:40.555008600Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "out.u_sorted",
+   "id": "8ca21cc093fadcb",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[[[9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228]],\n",
+       "\n",
+       "        [[9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228]],\n",
+       "\n",
+       "        [[9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228]],\n",
+       "\n",
+       "        [[9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228]],\n",
+       "\n",
+       "        [[9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228]],\n",
+       "\n",
+       "        [[9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228]],\n",
+       "\n",
+       "        [[9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228]],\n",
+       "\n",
+       "        [[9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228],\n",
+       "         [9.12406228, 9.5       , 9.79086228]],\n",
+       "\n",
+       "        [[6.96509773, 6.87898938, 7.4741174 ],\n",
+       "         [7.04137056, 6.97158557, 7.55596436],\n",
+       "         [7.65411306, 7.71546282, 8.21348699]],\n",
+       "\n",
+       "        [[6.97273625, 6.89010747, 7.48231415],\n",
+       "         [7.05483956, 6.98971154, 7.57041769],\n",
+       "         [7.6657989 , 7.73090008, 8.22602684]],\n",
+       "\n",
+       "        [[6.97456291, 6.89276241, 7.4842743 ],\n",
+       "         [7.05805842, 6.99403839, 7.5738718 ],\n",
+       "         [7.66859414, 7.73458834, 8.22902637]],\n",
+       "\n",
+       "        [[6.97533221, 6.89388017, 7.48509983],\n",
+       "         [7.05941463, 6.99586081, 7.57532712],\n",
+       "         [7.66977252, 7.73614263, 8.23029087]],\n",
+       "\n",
+       "        [[6.97576263, 6.89450537, 7.48556171],\n",
+       "         [7.06017247, 6.99687907, 7.57614034],\n",
+       "         [7.67043066, 7.73701066, 8.23099711]],\n",
+       "\n",
+       "        [[6.97597421, 6.89481283, 7.48578875],\n",
+       "         [7.0605473 , 6.99738252, 7.57654257],\n",
+       "         [7.67075727, 7.73744118, 8.23134758]],\n",
+       "\n",
+       "        [[6.97611138, 6.89501212, 7.48593594],\n",
+       "         [7.06078995, 6.99770844, 7.57680295],\n",
+       "         [7.67096854, 7.73771969, 8.2315743 ]],\n",
+       "\n",
+       "        [[6.97622787, 6.89518132, 7.48606095],\n",
+       "         [7.06099532, 6.99798432, 7.57702332],\n",
+       "         [7.67114704, 7.73795506, 8.23176584]],\n",
+       "\n",
+       "        [[7.80074494, 8.02822435, 8.37083494],\n",
+       "         [7.84863069, 8.08158828, 8.42222026],\n",
+       "         [8.04742508, 8.30278656, 8.63554284]],\n",
+       "\n",
+       "        [[7.8077129 , 8.03652861, 8.37831214],\n",
+       "         [7.85707118, 8.0915066 , 8.43127759],\n",
+       "         [8.05517527, 8.31184946, 8.64385942]],\n",
+       "\n",
+       "        [[7.80934273, 8.03847003, 8.38006108],\n",
+       "         [7.85904437, 8.09382414, 8.43339498],\n",
+       "         [8.05698734, 8.31396734, 8.64580392]],\n",
+       "\n",
+       "        [[7.80999086, 8.03924224, 8.38075657],\n",
+       "         [7.85982762, 8.09474427, 8.43423548],\n",
+       "         [8.0577049 , 8.31480614, 8.64657392]],\n",
+       "\n",
+       "        [[7.81028984, 8.03959897, 8.3810774 ],\n",
+       "         [7.86018579, 8.0951656 , 8.43461982],\n",
+       "         [8.05802915, 8.3151857 , 8.64692187]],\n",
+       "\n",
+       "        [[7.81033181, 8.03965012, 8.38112244],\n",
+       "         [7.86023059, 8.09521949, 8.43466789],\n",
+       "         [8.05806244, 8.31522571, 8.64695759]],\n",
+       "\n",
+       "        [[7.81013335, 8.03941629, 8.38090947],\n",
+       "         [7.85997598, 8.09492337, 8.43439468],\n",
+       "         [8.05781046, 8.31493381, 8.64668719]],\n",
+       "\n",
+       "        [[7.80908621, 8.03817789, 8.37978581],\n",
+       "         [7.85865299, 8.09337983, 8.432975  ],\n",
+       "         [8.05652766, 8.31344388, 8.64531065]],\n",
+       "\n",
+       "        [[8.05634719, 8.32967972, 8.64511699],\n",
+       "         [8.09389043, 8.37096933, 8.68540394],\n",
+       "         [8.22659322, 8.51724835, 8.82780485]],\n",
+       "\n",
+       "        [[8.06276542, 8.33706684, 8.65200427],\n",
+       "         [8.10121837, 8.37934626, 8.69326741],\n",
+       "         [8.23339878, 8.52500164, 8.83510777]],\n",
+       "\n",
+       "        [[8.06424012, 8.33876233, 8.65358675],\n",
+       "         [8.10290111, 8.38126795, 8.69507313],\n",
+       "         [8.23496372, 8.52678273, 8.83678708]],\n",
+       "\n",
+       "        [[8.06478777, 8.33939024, 8.65417442],\n",
+       "         [8.10352441, 8.38197802, 8.69574199],\n",
+       "         [8.23554503, 8.52744276, 8.83741087]],\n",
+       "\n",
+       "        [[8.06496856, 8.33959425, 8.65436842],\n",
+       "         [8.10372654, 8.38220497, 8.69595889],\n",
+       "         [8.23573624, 8.52765696, 8.83761606]],\n",
+       "\n",
+       "        [[8.06484736, 8.33944818, 8.65423836],\n",
+       "         [8.10358121, 8.38203221, 8.69580294],\n",
+       "         [8.23560698, 8.52750381, 8.83747735]],\n",
+       "\n",
+       "        [[8.06431446, 8.33882057, 8.65366652],\n",
+       "         [8.10295644, 8.3813037 , 8.69513251],\n",
+       "         [8.23503817, 8.52684312, 8.83686697]],\n",
+       "\n",
+       "        [[8.06207775, 8.3361939 , 8.65126635],\n",
+       "         [8.10033703, 8.37825696, 8.69232167],\n",
+       "         [8.23264287, 8.52406799, 8.83429662]],\n",
+       "\n",
+       "        [[8.16897539, 8.4561994 , 8.76597622],\n",
+       "         [8.20881881, 8.5001242 , 8.80873145],\n",
+       "         [8.3259784 , 8.62940554, 8.93445324]],\n",
+       "\n",
+       "        [[8.17571274, 8.4639158 , 8.77320595],\n",
+       "         [8.21625949, 8.50859908, 8.81671591],\n",
+       "         [8.33275114, 8.63709101, 8.94172095]],\n",
+       "\n",
+       "        [[8.177245  , 8.46566887, 8.77485018],\n",
+       "         [8.21795121, 8.51052402, 8.81853127],\n",
+       "         [8.3342936 , 8.63883954, 8.94337613]],\n",
+       "\n",
+       "        [[8.17778703, 8.46628728, 8.77543184],\n",
+       "         [8.21854908, 8.51120256, 8.81917283],\n",
+       "         [8.3348413 , 8.63945876, 8.94396386]],\n",
+       "\n",
+       "        [[8.17791058, 8.46642469, 8.77556441],\n",
+       "         [8.21868371, 8.51135181, 8.8193173 ],\n",
+       "         [8.33496957, 8.63960046, 8.9441015 ]],\n",
+       "\n",
+       "        [[8.17766872, 8.46614102, 8.77530488],\n",
+       "         [8.21841378, 8.51103771, 8.81902764],\n",
+       "         [8.33473342, 8.6393262 , 8.9438481 ]],\n",
+       "\n",
+       "        [[8.17685401, 8.46519334, 8.77443063],\n",
+       "         [8.21750656, 8.5099899 , 8.81805412],\n",
+       "         [8.33392761, 8.63839807, 8.94298339]],\n",
+       "\n",
+       "        [[8.1735613 , 8.46136769, 8.77089728],\n",
+       "         [8.21383415, 8.50575309, 8.81411333],\n",
+       "         [8.33065284, 8.63463111, 8.9394693 ]],\n",
+       "\n",
+       "        [[8.23581853, 8.53060224, 8.83770435],\n",
+       "         [8.27898629, 8.57816914, 8.88402688],\n",
+       "         [8.38984927, 8.70040976, 9.00299189]],\n",
+       "\n",
+       "        [[8.24306477, 8.53888052, 8.84548016],\n",
+       "         [8.28677743, 8.58702635, 8.89238741],\n",
+       "         [8.39680434, 8.70828913, 9.01045525]],\n",
+       "\n",
+       "        [[8.24470506, 8.54075277, 8.84724033],\n",
+       "         [8.28854084, 8.58902932, 8.89427969],\n",
+       "         [8.39838108, 8.71007378, 9.01214722]],\n",
+       "\n",
+       "        [[8.24526984, 8.54139612, 8.84784639],\n",
+       "         [8.28914791, 8.58971756, 8.89493113],\n",
+       "         [8.39892614, 8.71068943, 9.01273211]],\n",
+       "\n",
+       "        [[8.24536388, 8.54150057, 8.84794729],\n",
+       "         [8.28924834, 8.58982874, 8.8950389 ],\n",
+       "         [8.39902066, 8.71079356, 9.01283354]],\n",
+       "\n",
+       "        [[8.24503477, 8.5411198 , 8.84759413],\n",
+       "         [8.28889363, 8.58942071, 8.89465826],\n",
+       "         [8.39871214, 8.71043928, 9.01250248]],\n",
+       "\n",
+       "        [[8.2440018 , 8.53992919, 8.84648567],\n",
+       "         [8.28777972, 8.58814393, 8.89346295],\n",
+       "         [8.39773458, 8.70932141, 9.01145347]],\n",
+       "\n",
+       "        [[8.23986758, 8.5351658 , 8.84204931],\n",
+       "         [8.28331246, 8.58302554, 8.88866922],\n",
+       "         [8.39380308, 8.70482804, 9.00723465]],\n",
+       "\n",
+       "        [[8.28306507, 8.58326057, 8.88840374],\n",
+       "         [8.32875307, 8.63352021, 8.93743069],\n",
+       "         [8.435456  , 8.75097851, 9.05193163]],\n",
+       "\n",
+       "        [[8.29078663, 8.59205777, 8.89668961],\n",
+       "         [8.33688162, 8.64274091, 8.94615329],\n",
+       "         [8.44260585, 8.7590647 , 9.059604  ]],\n",
+       "\n",
+       "        [[8.29253155, 8.59404414, 8.89856205],\n",
+       "         [8.33871879, 8.6448232 , 8.94812472],\n",
+       "         [8.44422526, 8.76089446, 9.06134176]],\n",
+       "\n",
+       "        [[8.29312334, 8.59471692, 8.89919709],\n",
+       "         [8.33934197, 8.64552859, 8.94879344],\n",
+       "         [8.44477633, 8.76151616, 9.0619331 ]],\n",
+       "\n",
+       "        [[8.29320025, 8.59480248, 8.89927962],\n",
+       "         [8.33942254, 8.64561793, 8.9488799 ],\n",
+       "         [8.44485067, 8.76159816, 9.06201288]],\n",
+       "\n",
+       "        [[8.29280686, 8.59435113, 8.89885748],\n",
+       "         [8.33900806, 8.64514461, 8.94843513],\n",
+       "         [8.44449181, 8.76118905, 9.06162779]],\n",
+       "\n",
+       "        [[8.29160669, 8.59297687, 8.89756959],\n",
+       "         [8.33774225, 8.64370191, 8.94707681],\n",
+       "         [8.44338935, 8.75993525, 9.06044476]],\n",
+       "\n",
+       "        [[8.2868183 , 8.58749352, 8.89243127],\n",
+       "         [8.33268061, 8.63793303, 8.94164526],\n",
+       "         [8.43897155, 8.75491164, 9.0557041 ]],\n",
+       "\n",
+       "        [[8.31979798, 8.6242986 , 8.92782115],\n",
+       "         [8.36718604, 8.676333  , 8.9786724 ],\n",
+       "         [8.47042181, 8.78976985, 9.0894528 ]],\n",
+       "\n",
+       "        [[8.32790958, 8.63351602, 8.93652556],\n",
+       "         [8.37558163, 8.68583662, 8.98768155],\n",
+       "         [8.4777195 , 8.79801039, 9.09728381]],\n",
+       "\n",
+       "        [[8.32974352, 8.63559806, 8.93849352],\n",
+       "         [8.37748138, 8.68798493, 8.98972014],\n",
+       "         [8.47937714, 8.79987975, 9.09906259]],\n",
+       "\n",
+       "        [[8.33035988, 8.63629717, 8.93915493],\n",
+       "         [8.37812004, 8.68870649, 8.99040547],\n",
+       "         [8.47993578, 8.80050906, 9.09966205]],\n",
+       "\n",
+       "        [[8.33042579, 8.63637064, 8.93922566],\n",
+       "         [8.37818779, 8.68878178, 8.99047817],\n",
+       "         [8.47999689, 8.80057664, 9.09972763]],\n",
+       "\n",
+       "        [[8.32998392, 8.63586657, 8.9387515 ],\n",
+       "         [8.37772989, 8.68826151, 8.98998681],\n",
+       "         [8.47960206, 8.80012879, 9.09930395]],\n",
+       "\n",
+       "        [[8.3286543 , 8.63435154, 8.93732471],\n",
+       "         [8.37635036, 8.68669599, 8.98850646],\n",
+       "         [8.47840713, 8.79877555, 9.09802169]],\n",
+       "\n",
+       "        [[8.32336091, 8.62831713, 8.93164447],\n",
+       "         [8.37084343, 8.68044458, 8.98259708],\n",
+       "         [8.47362878, 8.79336297, 9.09289413]],\n",
+       "\n",
+       "        [[8.34994737, 8.65803443, 8.96017391],\n",
+       "         [8.39842971, 8.7111798 , 9.01219941],\n",
+       "         [8.49855545, 8.82101288, 9.11964249]],\n",
+       "\n",
+       "        [[8.35836188, 8.66757437, 8.96920336],\n",
+       "         [8.40701793, 8.72088398, 9.02141527],\n",
+       "         [8.50594445, 8.82934642, 9.12757148]],\n",
+       "\n",
+       "        [[8.36026882, 8.66973377, 8.97124966],\n",
+       "         [8.40896805, 8.72308442, 9.0235079 ],\n",
+       "         [8.50763354, 8.83124764, 9.12938401]],\n",
+       "\n",
+       "        [[8.36090594, 8.67045479, 8.97193334],\n",
+       "         [8.40961983, 8.72381938, 9.02420731],\n",
+       "         [8.50819916, 8.83188379, 9.12999097]],\n",
+       "\n",
+       "        [[8.36096422, 8.67051985, 8.97199588],\n",
+       "         [8.40967867, 8.72388489, 9.02427045],\n",
+       "         [8.50825103, 8.83194132, 9.13004663]],\n",
+       "\n",
+       "        [[8.36048498, 8.66997544, 8.97148161],\n",
+       "         [8.40918836, 8.72332989, 9.02374431],\n",
+       "         [8.50782981, 8.83146529, 9.12959462]],\n",
+       "\n",
+       "        [[8.35905354, 8.66835066, 8.96994556],\n",
+       "         [8.40772189, 8.72167143, 9.02217068],\n",
+       "         [8.5065649 , 8.83003762, 9.12823728]],\n",
+       "\n",
+       "        [[8.35337197, 8.66189519, 8.96384878],\n",
+       "         [8.40188205, 8.71506192, 9.01590404],\n",
+       "         [8.50152088, 8.82434066, 9.12282463]],\n",
+       "\n",
+       "        [[8.37553818, 8.68668964, 8.98763493],\n",
+       "         [8.42469372, 8.74049096, 9.04038282],\n",
+       "         [8.52197278, 8.84703823, 9.14477118]],\n",
+       "\n",
+       "        [[8.38418203, 8.69647098, 8.99691048],\n",
+       "         [8.43341302, 8.75032872, 9.04973935],\n",
+       "         [8.52940646, 8.8554148 , 9.15274813]],\n",
+       "\n",
+       "        [[8.38614836, 8.69869245, 8.99902052],\n",
+       "         [8.4354032 , 8.75256977, 9.05187497],\n",
+       "         [8.53112088, 8.85734104, 9.15458784]],\n",
+       "\n",
+       "        [[8.38680265, 8.69943132, 8.99972262],\n",
+       "         [8.43606567, 8.75331541, 9.05258586],\n",
+       "         [8.53169244, 8.85798285, 9.15520117]],\n",
+       "\n",
+       "        [[8.38685533, 8.69949018, 8.99977915],\n",
+       "         [8.43611798, 8.75337374, 9.05264199],\n",
+       "         [8.53173757, 8.85803302, 9.1552496 ]],\n",
+       "\n",
+       "        [[8.38634663, 8.69891422, 8.99923328],\n",
+       "         [8.43560283, 8.75279236, 9.0520892 ],\n",
+       "         [8.53129639, 8.8575359 , 9.15477618]],\n",
+       "\n",
+       "        [[8.38483379, 8.69720241, 8.99760988],\n",
+       "         [8.43406857, 8.7510621 , 9.05044281],\n",
+       "         [8.52997735, 8.85605121, 9.15336074]],\n",
+       "\n",
+       "        [[8.37885299, 8.69042393, 8.99119199],\n",
+       "         [8.42797974, 8.74418646, 9.04390899],\n",
+       "         [8.52473906, 8.85014759, 9.14773963]]]], dtype=float64)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-23T17:25:06.150437Z",
+     "start_time": "2026-02-23T17:25:05.967679700Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "state.farm.yaw_angles",
+   "id": "833d3e5bc9e846b0",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]],      dtype=float64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "1197d027dce54e2f"
   }
  ],
  "metadata": {
