--- a/yaw_testing.ipynb
+++ b/yaw_testing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-23T14:18:18.516138200Z",
-     "start_time": "2026-02-23T14:18:18.343284100Z"
+     "end_time": "2026-02-24T12:25:29.494890100Z",
+     "start_time": "2026-02-24T12:25:27.611772700Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-23T14:18:21.100792900Z",
-     "start_time": "2026-02-23T14:18:18.517138900Z"
+     "end_time": "2026-02-24T12:25:33.378552500Z",
+     "start_time": "2026-02-24T12:25:29.496890100Z"
     }
    },
    "cell_type": "code",
@@ -295,6 +295,44 @@
     }
    ],
    "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-24T12:25:53.491835100Z",
+     "start_time": "2026-02-24T12:25:53.081749100Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "wake_model = \"gauss\"\n",
+    "fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\n",
+    "# hr1_fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\n",
+    "\n",
+    "floris_yaw_angles = np.array([y1, y2, y3, y4, y5, y6, y7, y8, y9]).reshape(1, -1)\n",
+    "# # hr1_floris_yaw_angles = np.concat([np.full((1, 70), 10), np.zeros((1, 10))], axis=1)\n",
+    "#\n",
+    "time_series = TimeSeries(\n",
+    "    wind_directions=np.array([wd]),\n",
+    "    wind_speeds=np.array([ws]),\n",
+    "    turbulence_intensities=ti_val,\n",
+    ")"
+   ],
+   "id": "e65fed67c4324de",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 5\u001B[39m\n\u001B[32m      2\u001B[39m fmodel = FlorisModel(\u001B[33mrf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33m../floris/examples/inputs/\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mwake_model\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m_vesta.yaml\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m      3\u001B[39m \u001B[38;5;66;03m# hr1_fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m5\u001B[39m floris_yaw_angles = np.array([\u001B[43my1\u001B[49m, y2, y3, y4, y5, y6, y7, y8, y9]).reshape(\u001B[32m1\u001B[39m, -\u001B[32m1\u001B[39m)\n\u001B[32m      6\u001B[39m \u001B[38;5;66;03m# # hr1_floris_yaw_angles = np.concat([np.full((1, 70), 10), np.zeros((1, 10))], axis=1)\u001B[39;00m\n\u001B[32m      7\u001B[39m \u001B[38;5;66;03m#\u001B[39;00m\n\u001B[32m      8\u001B[39m time_series = TimeSeries(\n\u001B[32m      9\u001B[39m     wind_directions=np.array([wd]),\n\u001B[32m     10\u001B[39m     wind_speeds=np.array([ws]),\n\u001B[32m     11\u001B[39m     turbulence_intensities=ti_val,\n\u001B[32m     12\u001B[39m )\n",
+      "\u001B[31mNameError\u001B[39m: name 'y1' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {},
