serial refine testing

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -21,8 +21,8 @@
    "id": "0f40c543",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-26T11:23:59.356919400Z",
-     "start_time": "2026-02-26T11:23:57.809860800Z"
+     "end_time": "2026-02-26T16:44:37.895602500Z",
+     "start_time": "2026-02-26T16:44:36.333931600Z"
     }
    },
    "source": [
@@ -85,6 +85,34 @@
     "DTYPE = set_precision(\"float32\")"
    ],
    "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-26T16:44:57.118077500Z",
+     "start_time": "2026-02-26T16:44:56.527503200Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "a = jnp.array([-30.0])#, -15.0, 0.0, 15.0, 30.0])\n",
+    "b = jnp.array([-7.5, -3.75, 0.0, 3.75, 7.5])\n",
+    "a + b"
+   ],
+   "id": "d6584b395f2cb0ec",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([-37.5 , -33.75, -30.  , -26.25, -22.5 ], dtype=float32)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "execution_count": 2
   },
   {
